--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>My First Heading</h1>
   <p>My first paragraph.</p>
+  <img src='https://nissy-enter.com/ogp_202303.jpg' alt='Nissy' width-"500" height="600">
 </body>
 </html>
